--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "i18next": "^23.4.6",
     "inversify": "^6.0.1",
     "luxon": "^3.4.2",
+    "node-persist": "^3.1.3",
     "reflect-metadata": "^0.1.13",
-    "telegraf": "^4.13.1",
-    "telegraf-session-local": "^2.1.1"
+    "telegraf": "^4.13.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.5.9",
+    "@types/node-persist": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
