--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.3.1",
     "i18next": "^23.4.6",
     "inversify": "^6.0.1",
+    "join-images": "^1.1.5",
     "luxon": "^3.4.2",
     "node-persist": "^3.1.3",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.32.5",
     "telegraf": "^4.13.1"
   },
   "devDependencies": {
